--- a/style_beauty.css
+++ b/style_beauty.css
@@ -16,7 +16,7 @@
     transition: all .2s;
 }
 html{
-    font-size: 62.5%;
+    /* font-size: 62.5%; */
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
@@ -48,7 +48,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2rem;
+    padding: 0.7rem;
     position: relative;
 }
 #search-box{
@@ -85,7 +85,7 @@ header{
 }
 header .navbar a{
     color: #333;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     padding: 0 1rem;
     text-decoration: none;
 }
@@ -93,7 +93,7 @@ header .navbar a:hover{
     color: #ffd7ba;
 }
 header .icons i, header .icons a{
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #333;
     padding-left: 1rem;
     cursor: pointer;
@@ -251,22 +251,21 @@ header .icons i:hover, header .icons a:hover{
     display: flex;
 } 
 
-
 /*======================= End header =====================*/
 /*======================= Start Hero section ===================*/
 #hero {
     width: 100%;
-    height: 82vh;
+    height: 87vh;
     background: url("assets/img/organic-argan.jpg") center center;
     background-size: cover;
     position: relative;
     background-attachment: fixed;
   }
-  #hero .container {
+ #hero .container {
     padding-top: 80px;
   } 
   
-   #hero:before {
+#hero:before {
     content: "";
     background: rgba(0, 0, 0, 0.6);
     position: absolute;
@@ -327,7 +326,7 @@ header .icons i:hover, header .icons a:hover{
       line-height: 36px;
     }
   }
-  /*=================== End Hero section ===================*/
+/*=================== End Hero section ===================*/
   
 /*==================== Body first section ===================*/
 h1{
@@ -339,10 +338,10 @@ p{
     font-weight: 600;
     text-align: justify;
 }
-/* images section*/
+/*=================== images section ===========================*/
 .image{
     height: 50rem;
-    width: 120rem;
+    /* width: 120rem; */
     border-radius: .5rem;
     box-shadow: 0 .5rem 1rem rgba(51,51,51,.2);
     display: flex;
@@ -350,7 +349,7 @@ p{
     overflow: hidden; 
 }
 .image-container{
-    width: 50%;  
+    width: 60%;  
 }
 .big-img, .hair, .hydratation, .big, .picture{
    height: 70%;
@@ -365,7 +364,7 @@ p{
 }
 .small-image, .small, .sm-img, .pic, .pics{
     height: 30%;
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
  }
@@ -383,15 +382,15 @@ p{
  .content{
      width: 50%;
      position: relative;
-     padding: 2rem;
+     padding: 1.5rem;
  }
  .content h2{
-     font-size: 4rem;
+     font-size: 3rem;
      padding-top: 2rem;
      color: #e85d04;
  }
  .content p{
-     font-size: 2rem;
+     font-size: 1rem;
      padding: 1rem 0;
 
  }
@@ -401,10 +400,14 @@ p{
  }
  
 
-/* Media queries Ipad */
+/*===================== Media queries Ipad =====================*/
 @media (max-width:1024px){
+    header .navbar a{
+        font-size: 1rem;
+    }
     .image{
-        width: 70rem;
+        width: 50rem;
+        margin: 4rem;
     }
     .content{
         width: 60%;
@@ -413,7 +416,7 @@ p{
         font-size: 3rem;
     }
     .content p{
-        font-size: 1.5rem;
+        font-size: 1rem;
         padding: 1rem 0;
    
     }
@@ -422,8 +425,16 @@ p{
         font-size: 1.5rem;
     }  
 }
-/* Media queries Phone*/
+/* Media queries iPhone X*/
+@media (max-width:768px){
+    header .navbar a{
+        font-size: 2.5rem;
+    }
+}
 @media (max-width:375px){
+    header .navbar a{
+        font-size: 2rem;
+    }
     .image{
         width: 35rem;
         margin: 5rem;
@@ -446,9 +457,50 @@ p{
         background-color: #ffba08;
         font-size: 1rem;
     }
+    .small-image img, .small img, .sm-img img, .pic img, .pics img{
+        height: 13rem;
+        width: 10rem;  
+        object-fit: cover;
+        cursor: pointer;
+        box-shadow: 0 .5rem 1rem rgba(51,51,51,.2);
+        border: 1rem solid #fff;
+    }
+}
+/* Media queries iPhone 6/7/8*/
+@media (max-width:414px){
+    .image{
+        width: 35rem;
+        margin: 5rem;
+    }
+    .content{
+        width: 50%;
+        position: relative;
+    }
+    .content h2{
+        font-size: 2rem;
+        padding-top: 1rem;
+        color: #e85d04;
+    }
+    .content p{
+        font-size: 0.8rem;
+        padding: 1rem 0;
+   
+    }
+    .content .stars i{
+        background-color: #ffba08;
+        font-size: 1rem;
+    }
+    .small-image img, .small img, .sm-img img, .pic img, .pics img{
+        height: 13rem;
+        width: 10rem;  
+        object-fit: cover;
+        cursor: pointer;
+        box-shadow: 0 .5rem 1rem rgba(51,51,51,.2);
+        border: 1rem solid #fff;
+    }
 }
 
-/* Add to cart */
+/*=================== Add to cart =================*/
 .card-title{
     font-size: 15px;
     font-weight: bold;
@@ -468,8 +520,6 @@ p{
     display: flex;
     justify-content: center;
 }
-
-
 
 .wrapper{
     background-color: #e6d6c6;
@@ -528,21 +578,7 @@ p{
     font-size: 20px;
     font-weight: 600;
 }
-/* .cart .btn{
-    font-size: 15px;
-    font-weight: bold;
-    cursor: pointer;
-    box-shadow: 0 .6rem 2rem rgba(15, 13, 13, 0.2);
-    border: 2px solid #ca6702;
-    border-radius: 7px;
-    margin: 4px;
-}
-.btn:hover{
-    background-color: #333;
-    color: #e6d6c6;
-    transform: scale(.7); 
-    
-} */
+
 .cart .price{
     font-size: 1.5rem;
     font-weight: bold;
@@ -551,46 +587,28 @@ p{
     text-decoration: line-through;
     
 }
-    
-
-
-/* footer */
- /* footer{
-    background-color:  #e8e8e4ff ;
-} */
-/* #footer {
-    background: black;
-    color: #333;
-    font-size: 20px;
-    margin-top: 30px;
-}
-#footer .footer-top {
-    background: #e8e8e4ff;
-    border-top: 1px solid #fec89a;
-    border-bottom: 1px solid #fec89a;
-    padding: 20px 0 30px 0;
-}
-
-#footer .copyright {
-    text-align: center;
-    padding-top: 5px;
-}
-#footer .credits {
-    padding-top: 5px;
-    text-align: center;
-    font-size: 13px;
-    color: #333;
-}
-#footer .credits a{
-    text-decoration: none;
-} */
-
-.service{
-    padding-left: 38%;
+.service, .service p{
     font-size: 10px;
     line-height: 6px;
+    text-align: center;
 }
 /* footer */
     footer{
     background-color:  #e8e8e4ff ;
+}
+/* Citation */
+.bg{
+    background-color:  #fec89a;
+}
+#citation p{
+    font-family: 'Great Vibes', cursive;
+    color: olive;
+    font-size: 1.5rem;
+  }
+#citation h2{
+    font-family: 'Merienda', cursive;
+    color: white;
+}
+#citation h2:hover{
+    color: olive;
 }
